# networking

Backend/: settings.gradle
Backend/app/: build.gradle
Backend/app/src/main/: AndroidManifest.xml
Backend/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Backend/app/src/main/cpp/includes/client-socket/: client.h
Backend/app/src/main/cpp/includes/logs/: logs.h
Backend/app/src/main/cpp/includes/server-socket/: echo-service.h  iserver.h  server.cpp  server.h
Backend/app/src/main/java/com/example/backend/: MainActivity.kt
Backend/app/src/main/res/drawable-anydpi-v24/: ic_stat_name.xml
Backend/app/src/main/res/layout/: activity_main.xml
Backend/gradle/wrapper/: gradle-wrapper.properties
Simplest_Get/: CMakeLists.txt  conanfile.txt  main.cpp
Simplest_Server/: CMakeLists.txt  LICENSE  main.cpp
